# pyftpkit

./: .githooks.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-bake.hcl  manifest.xml  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: hooks.yml  tests.yml  wheels.yml
docker/: README.md
docker/meta-pyftpkit/conf/: layer.conf
docker/meta-pyftpkit/recipes/python3-dotenv/: python3-dotenv_1.0.1.bb
docker/meta-pyftpkit/recipes/python3-pydantic-settings/: python3-pydantic-settings_2.11.0.bb
docker/meta-pyftpkit/recipes/python3-pyftpkit/: python3-pyftpkit_0.1.0.bb  python3-pyftpkit_0.1.1.bb
docker/meta-pyftpkit/recipes/python3-pyftpkit-image/: python3-pyftpkit-image.bb
docker/meta-pyftpkit/recipes/python3-scikit-build-core/: python3-scikit-build-core_0.11.6.bb
docker/meta-pyftpkit/recipes/python3-scikit-build-core/files/: 0001-fix-the-issue-with-classifiers.patch  0002-use-PYTHON_INCLUDE_DIR-to-find-an-interpreter-and-its-headers.patch
docker/meta-pyftpkit/recipes/python3-typing-inspection/: python3-typing-inspection_0.4.0.bb
docker/meta-pyftpkit/recipes/python3-typing-inspection/files/: 0001-fix-the-issue-with-classifiers.patch
examples/: .env  download.py  listdir.py  makedirs.py  rm.py  rmtree.py  upload.py  walk.py
src/pyftpkit/: __about__.py  __init__.py  __main__.py  _ftp.py  _pathtrie.pyi  _pool.py  _pycurl.py  connection_parameters.py  exceptions.py  fs.py  ftp.py  ftpfs.py  ftpfs.pyi  loader.py  loader.pyi  logger_wrapper.py
src/pyftpkit/_pathtrie/: pathtrie.cpp  pathtrie.h  pathtrie_iterator.cpp  pathtrie_iterator.h  pathtrie_module.cpp
src/pyftpkit/pathtrie/: pathtrie.cpp  pathtrie.h  pathtrie_iterator.cpp  pathtrie_iterator.h  pathtrie_module.cpp
tests/: conftest.py
tests/pyftpkit/: test_ftp.py  test_ftpfs.py  test_loader.py  test_pathtrie.py  test_pool.py  test_pycurl.py
